force-app/main/default/objects/Investment__c/fields/Recalculation_Status__c.field-meta.xml
<CustomField>
    <fullName>Recalculation_Status__c</fullName>
    <defaultValue>&#39;Not Needed&#39;</defaultValue>
    <label>Recalculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Needed</fullName>
                <default>true</default>
                <label>Not Needed</label>
            </value>
            <value>
                <fullName>Pending Recalculation</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>