force-app/main/default/objects/Investment__c/fields/Repayment_Status__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Status__c</fullName>
    <formula>if(Total_Paid__c &lt; Total_Due__c,&quot;Behind Schedule&quot;,&quot;On Schedule&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repayment Status</label>
    <type>Text</type>
</CustomField>