force-app/main/default/objects/Investment__c/fields/Setup_Fee__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee__c</fullName>
    <label>Setup Fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>% of Disbursement Amount</fullName>
            </value>
            <value>
                <fullName>Flat Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>