force-app/main/default/objects/Investment__c/fields/Setup_Fee_Cap__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Cap__c</fullName>
    <label>Setup Fee Cap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>