force-app/main/default/objects/Investment__c/fields/Setup_Fee_Expected__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fee_Expected__c</fullName>
    <formula>if(TEXT(Setup_Fee__c) = &#39;Flat Amount&#39;, Flat_Amount__c, if(TEXT(Setup_Fee__c) = &#39;% of Disbursement Amount&#39;, if(AND(Setup_Fee_Cap__c &gt; 0, Setup_Fee_Cap__c &lt; Amount__c * Percent_of_Disbursement_Amount__c), Setup_Fee_Cap__c, Amount__c * Percent_of_Disbursement_Amount__c), 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Setup Fees Expected (Loan-based)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>