force-app/main/default/objects/Investment__c/fields/Setup_Fees_Expected__c.field-meta.xml
<CustomField>
    <fullName>Setup_Fees_Expected__c</fullName>
    <label>Setup Fees Expected (Schedule-based)</label>
    <summarizedField>Repayment_Schedule__c.Setup_Fees_Expected__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>