force-app/main/default/objects/Investment__c/fields/Total_Amount_Written_Off1__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Written_Off1__c</fullName>
    <description>Sum of principal amounts of defaulted loan repayment schedules</description>
    <label>Total Amount Written Off</label>
    <summarizedField>Repayment_Schedule__c.Total_Amount_Written_Off__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>