force-app/main/default/objects/Investment__c/fields/Total_Collateral__c.field-meta.xml
<CustomField>
    <fullName>Total_Collateral__c</fullName>
    <description>The total Collateral for this Loan</description>
    <inlineHelpText>The total Collateral for this Loan</inlineHelpText>
    <label>Total Collateral</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>