force-app/main/default/objects/Investment__c/fields/Total_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Total_Guarantee__c</fullName>
    <description>The sum of all guarantees for this loan</description>
    <inlineHelpText>The sum of all guarantees for this loan</inlineHelpText>
    <label>Total Guarantee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>