force-app/main/default/objects/Investment__c/fields/Total_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Total_Overdue__c</fullName>
    <description>The total amount of payments outstanding at this moment of time (total scheduled amounts to date minus total paid to date)</description>
    <formula>if(Total_Due__c - Total_Paid__c- Total_Amount_Written_Off1__c&lt;0,0,Total_Due__c - Total_Paid__c - Total_Amount_Written_Off1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Overdue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>