force-app/main/default/objects/Investment__c/fields/Total_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid__c</fullName>
    <label>Total Paid</label>
    <summarizedField>Repayment_Schedule__c.Total_Paid__c</summarizedField>
    <summaryForeignKey>Repayment_Schedule__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>