force-app/main/default/objects/Investment__c/fields/Variable_Interest_Spread__c.field-meta.xml
<CustomField>
    <fullName>Variable_Interest_Spread__c</fullName>
    <description>This is the margin that will be added or subtracted from the base interest rate.</description>
    <label>Variable Interest Spread</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>