force-app/main/default/objects/Investment__c/recordTypes/Equity.recordType-meta.xml
<RecordType>
    <fullName>Equity</fullName>
    <active>true</active>
    <label>Equity</label>
</RecordType>