force-app/main/default/objects/Investment__c/recordTypes/Loan.recordType-meta.xml
<RecordType>
    <fullName>Loan</fullName>
    <active>true</active>
    <label>Loan</label>
</RecordType>