force-app/main/default/objects/Investment__c/validationRules/Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Account</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, ISBLANK(Account__c))</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Complete this field (Account)</errorMessage>
</ValidationRule>