force-app/main/default/objects/Investment__c/validationRules/Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, ISBLANK(Amount__c))</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Complete this field (Amount)</errorMessage>
</ValidationRule>