force-app/main/default/objects/Investment__c/validationRules/Capitalized_Charging_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>Capitalized_Charging_Method</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, TEXT(Disbursement_Method__c) == &#39;Tranched disbursement allowed&#39;, TEXT(Setup_Fee_Charging_Method__c) == &#39;Capitalized&#39;)</errorConditionFormula>
    <errorDisplayField>Setup_Fee_Charging_Method__c</errorDisplayField>
    <errorMessage>&#39;Capitalized&#39; is only allowed in a combination with the Disbursement Method ‘Full disbursement at start’</errorMessage>
</ValidationRule>