force-app/main/default/objects/Investment__c/validationRules/Day_Count_Convention.validationRule-meta.xml
<ValidationRule>
    <fullName>Day_Count_Convention</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, ISBLANK(TEXT(Day_Count_Convention__c)))</errorConditionFormula>
    <errorDisplayField>Day_Count_Convention__c</errorDisplayField>
    <errorMessage>Complete this field (Day Count Convention)</errorMessage>
</ValidationRule>