force-app/main/default/objects/Investment__c/validationRules/Disbursement_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Disbursement_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, ISBLANK(Disbursement_Date__c))</errorConditionFormula>
    <errorDisplayField>Disbursement_Date__c</errorDisplayField>
    <errorMessage>Complete this field (Disbursement Date)</errorMessage>
</ValidationRule>