force-app/main/default/objects/Investment__c/validationRules/Disbursement_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>Disbursement_Method</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, ISBLANK(TEXT(Disbursement_Method__c)))</errorConditionFormula>
    <errorDisplayField>Disbursement_Method__c</errorDisplayField>
    <errorMessage>Complete this field (Disbursement Method)</errorMessage>
</ValidationRule>