force-app/main/default/objects/Investment__c/validationRules/First_Repayment_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Repayment_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, !Open_Ended_Loan__c, ISBLANK(First_Repayment_Date__c))</errorConditionFormula>
    <errorDisplayField>First_Repayment_Date__c</errorDisplayField>
    <errorMessage>Complete this field (First Repayment Date)</errorMessage>
</ValidationRule>