force-app/main/default/objects/Investment__c/validationRules/Flat_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Flat_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, TEXT(Setup_Fee__c) == &#39;Flat Amount&#39;, ISBLANK(Flat_Amount__c))</errorConditionFormula>
    <errorDisplayField>Flat_Amount__c</errorDisplayField>
    <errorMessage>Complete this field (Flat Amount)</errorMessage>
</ValidationRule>