force-app/main/default/objects/Investment__c/validationRules/Grace_Period_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Grace_Period_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, !Open_Ended_Loan__c, ISBLANK(TEXT(Grace_Period_Type__c)))</errorConditionFormula>
    <errorDisplayField>Grace_Period_Type__c</errorDisplayField>
    <errorMessage>Complete this field (Grace Period Type)</errorMessage>
</ValidationRule>