force-app/main/default/objects/Investment__c/validationRules/Late_Repayment_Calculation_Method.validationRule-meta.xml
<ValidationRule>
    <fullName>Late_Repayment_Calculation_Method</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, !Open_Ended_Loan__c, ISBLANK(TEXT(Late_Repayment_Calculation_Method__c)))</errorConditionFormula>
    <errorDisplayField>Late_Repayment_Calculation_Method__c</errorDisplayField>
    <errorMessage>Complete this field (Late Repayment Calculation Method)</errorMessage>
</ValidationRule>