force-app/main/default/objects/Investment__c/validationRules/Late_Repayment_Fixed_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Late_Repayment_Fixed_Fee</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, !Open_Ended_Loan__c, NOT(ISBLANK(TEXT(Late_Repayment_Calculation_Method__c))), TEXT(Late_Repayment_Calculation_Method__c) == &#39;Fixed Fee&#39;, ISBLANK(Late_Repayment_Fixed_Fee__c))</errorConditionFormula>
    <errorDisplayField>Late_Repayment_Fixed_Fee__c</errorDisplayField>
    <errorMessage>Complete this field (Late Repayment Fixed Fee)</errorMessage>
</ValidationRule>