force-app/main/default/objects/Investment__c/validationRules/Late_Repayment_Interest_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Late_Repayment_Interest_Rate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, !Open_Ended_Loan__c, NOT(ISBLANK(TEXT(Late_Repayment_Calculation_Method__c))), OR(TEXT(Late_Repayment_Calculation_Method__c) == &#39;Principal&#39;, TEXT(Late_Repayment_Calculation_Method__c) == &#39;Principal+Interest&#39;), ISBLANK(Late_Repayment_Interest_Rate__c))</errorConditionFormula>
    <errorDisplayField>Late_Repayment_Interest_Rate__c</errorDisplayField>
    <errorMessage>Complete this field (Late Repayment Interest Rate)</errorMessage>
</ValidationRule>