force-app/main/default/objects/Investment__c/validationRules/Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, ISBLANK(Name))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Complete this field (Name)</errorMessage>
</ValidationRule>