force-app/main/default/objects/Investment__c/validationRules/Negative_Flat_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Flat_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, Flat_Amount__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Flat_Amount__c</errorDisplayField>
    <errorMessage>Negative values not allowed (Flat Amount)</errorMessage>
</ValidationRule>