force-app/main/default/objects/Investment__c/validationRules/Negative_Interest_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Interest_Rate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, Interest_Rate__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Interest_Rate__c</errorDisplayField>
    <errorMessage>Negative values not allowed (Interest Rate)</errorMessage>
</ValidationRule>