force-app/main/default/objects/Investment__c/validationRules/Negative_Late_Repayment_Fixed_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Late_Repayment_Fixed_Fee</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, Late_Repayment_Fixed_Fee__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Late_Repayment_Fixed_Fee__c</errorDisplayField>
    <errorMessage>Negative values not allowed (Late Repayment Fixed Fee)</errorMessage>
</ValidationRule>