force-app/main/default/objects/Investment__c/validationRules/Negative_Late_Repayment_Tolerance_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Late_Repayment_Tolerance_Period</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, Late_Repayment_Tolerance_Period__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Late_Repayment_Tolerance_Period__c</errorDisplayField>
    <errorMessage>Negative values not allowed (Late Repayment Tolerance Period)</errorMessage>
</ValidationRule>