force-app/main/default/objects/Investment__c/validationRules/Negative_Monitoring_Fee_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Monitoring_Fee_Percentage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, Monitoring_Fee_Percentage__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Monitoring_Fee_Percentage__c</errorDisplayField>
    <errorMessage>Negative values not allowed (Monitoring Fee Percentage)</errorMessage>
</ValidationRule>