force-app/main/default/objects/Investment__c/validationRules/Negative_Number_of_Instalments.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Number_of_Instalments</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, Number_of_Instalments__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Number_of_Instalments__c</errorDisplayField>
    <errorMessage>Negative values not allowed (Number of Instalments)</errorMessage>
</ValidationRule>