force-app/main/default/objects/Investment__c/validationRules/Negative_Percent_of_Disbursement_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Percent_of_Disbursement_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, Percent_of_Disbursement_Amount__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Percent_of_Disbursement_Amount__c</errorDisplayField>
    <errorMessage>Negative values not allowed (% of Disbursement Amount)</errorMessage>
</ValidationRule>