force-app/main/default/objects/Investment__c/validationRules/Negative_Repayment_Frequency.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Repayment_Frequency</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, Repayment_Frequency__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Repayment_Frequency__c</errorDisplayField>
    <errorMessage>Negative values not allowed (Repayment Frequency)</errorMessage>
</ValidationRule>