force-app/main/default/objects/Investment__c/validationRules/Negative_Setup_Fee_Cap.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Setup_Fee_Cap</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, Setup_Fee_Cap__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Setup_Fee_Cap__c</errorDisplayField>
    <errorMessage>Negative values not allowed (Setup Fee Cap)</errorMessage>
</ValidationRule>