force-app/main/default/objects/Investment__c/validationRules/Negative_Variable_Interest_Spread.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Variable_Interest_Spread</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, Variable_Interest_Spread__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>Variable_Interest_Spread__c</errorDisplayField>
    <errorMessage>Negative values not allowed (Variable Interest Spread)</errorMessage>
</ValidationRule>