force-app/main/default/objects/Investment__c/validationRules/Number_of_Grace_Periods.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Grace_Periods</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, !Open_Ended_Loan__c,  NOT(ISBLANK(TEXT(Grace_Period_Type__c))), TEXT(Grace_Period_Type__c) != &#39;None&#39;, ISBLANK(Number_of_Grace_Periods__c))</errorConditionFormula>
    <errorDisplayField>Number_of_Grace_Periods__c</errorDisplayField>
    <errorMessage>Complete this field (Number of Grace Periods)</errorMessage>
</ValidationRule>