force-app/main/default/objects/Investment__c/validationRules/Number_of_Instalments.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Instalments</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, !Open_Ended_Loan__c, ISBLANK(Number_of_Instalments__c))</errorConditionFormula>
    <errorDisplayField>Number_of_Instalments__c</errorDisplayField>
    <errorMessage>Complete this field (Number of Instalments)</errorMessage>
</ValidationRule>