force-app/main/default/objects/Investment__c/validationRules/Number_of_Instalments_Number_of_Grace.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Instalments_Number_of_Grace</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, !Open_Ended_Loan__c, Number_of_Instalments__c &lt;= Number_of_Grace_Periods__c)</errorConditionFormula>
    <errorDisplayField>Number_of_Instalments__c</errorDisplayField>
    <errorMessage>Number of Instalments must be greater than Number of Grace Period</errorMessage>
</ValidationRule>