force-app/main/default/objects/Investment__c/validationRules/Open_Ended_Loan_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Ended_Loan_Validation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;,  
    Open_Ended_Loan__c = true, 
    OR ( 
        NOT(ISBLANK(TEXT(Late_Repayment_Calculation_Method__c))), 
        NOT(ISBLANK(Late_Repayment_Interest_Rate__c)), 
        NOT(ISBLANK(Late_Repayment_Tolerance_Period__c)), 
        NOT(ISBLANK(Number_of_Instalments__c)),
        NOT(ISBLANK(Number_of_Grace_Periods__c)), 
        NOT(ISBLANK(Repayment_Frequency__c)),
        NOT(ISBLANK(TEXT(Grace_Period_Type__c))), 
        NOT(ISBLANK(TEXT(Repayment_Frequency_Unit__c))) 
    ) 
)</errorConditionFormula>
    <errorMessage>Late Repayment parameters, Number of Instalments, Grace Period and Repayment Frequency fields cannot be filled in, as they are irrelevant for Open Ended Loans</errorMessage>
</ValidationRule>