force-app/main/default/objects/Investment__c/validationRules/Paid_Up_Front_Scheduled.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Up_Front_Scheduled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, Open_Ended_Loan__c, TEXT(Setup_Fee_Charging_Method__c) == &#39;Paid Up Front (scheduled)&#39;)</errorConditionFormula>
    <errorDisplayField>Setup_Fee_Charging_Method__c</errorDisplayField>
    <errorMessage>&#39;Paid Up Front (scheduled)&#39; is not allowed for Open-Ended loans</errorMessage>
</ValidationRule>