force-app/main/default/objects/Investment__c/validationRules/Percent_of_Disbursement_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Percent_of_Disbursement_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, RecordType.DeveloperName == &#39;Loan&#39;, TEXT(Setup_Fee__c) == &#39;% of Disbursement Amount&#39;, ISBLANK(Percent_of_Disbursement_Amount__c))</errorConditionFormula>
    <errorDisplayField>Percent_of_Disbursement_Amount__c</errorDisplayField>
    <errorMessage>Complete this field (% of Disbursement Amount)</errorMessage>
</ValidationRule>