force-app/main/default/objects/Investment__c/validationRules/Range_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Range_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, OR(Amount__c &lt;  Loan_Product__r.Minimum_Loan_Amount__c, Amount__c &gt; Loan_Product__r.Maximum_Loan_Amount__c))</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Out of allowed range (Amount)</errorMessage>
</ValidationRule>