force-app/main/default/objects/Investment__c/validationRules/Range_Interest_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Range_Interest_Rate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, OR(Interest_Rate__c &lt; Loan_Product__r.Minimum_Interest_Rate__c, Interest_Rate__c &gt; Loan_Product__r.Maximum_Interest_Rate__c))</errorConditionFormula>
    <errorDisplayField>Interest_Rate__c</errorDisplayField>
    <errorMessage>Out of allowed range (Interest Rate)</errorMessage>
</ValidationRule>