force-app/main/default/objects/Investment__c/validationRules/Range_Late_Repayment_Tolerance_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>Range_Late_Repayment_Tolerance_Period</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, OR(Late_Repayment_Tolerance_Period__c &lt; Loan_Product__r.Minimum_Arrears_Tolerance_Period__c, Late_Repayment_Tolerance_Period__c &gt; Loan_Product__r.Maximum_Arrears_Tolerance_Period_days__c))</errorConditionFormula>
    <errorDisplayField>Late_Repayment_Tolerance_Period__c</errorDisplayField>
    <errorMessage>Out of allowed range (Late Repayment Tolerance Period)</errorMessage>
</ValidationRule>