force-app/main/default/objects/Investment__c/validationRules/Range_Monitoring_Fee_Percentage.validationRule-meta.xml
<ValidationRule>
    <fullName>Range_Monitoring_Fee_Percentage</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, OR(Monitoring_Fee_Percentage__c &lt; Loan_Product__r.Minimum_Monitoring_Fee_Percentage__c, Monitoring_Fee_Percentage__c &gt; Loan_Product__r.Maximum_Monitoring_Fee_Percentage__c))</errorConditionFormula>
    <errorDisplayField>Monitoring_Fee_Percentage__c</errorDisplayField>
    <errorMessage>Out of allowed range (Monitoring Fee Percentage)</errorMessage>
</ValidationRule>