force-app/main/default/objects/Investment__c/validationRules/Range_Variable_Interest_Spread.validationRule-meta.xml
<ValidationRule>
    <fullName>Range_Variable_Interest_Spread</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$Setup.Validation_Settings__c.Disable_Validation_Rules_on_Investment__c, Variable_Interest_Spread__c &gt;  Loan_Product__r.Maximum_Interest_Rate__c)</errorConditionFormula>
    <errorDisplayField>Variable_Interest_Spread__c</errorDisplayField>
    <errorMessage>Out of allowed range (Variable Interest Spread)</errorMessage>
</ValidationRule>